# dynamo-pydantic

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: push-main.yml
0.1.1/: 404.html  index.html  objects.inv
0.1.1/api/dynamo_pydantic/: dates.html  dynamo_model.html  errors.html  index.html  obj_manager.html  settings.html  table.html  types.html
0.1.1/api/xboto/: client.html  dependencies.html  index.html  resource.html
0.1.1/api/xinject/: dependency.html
0.1.1/api/xsentinels/: unwrap.html
0.1.1/changelog/: index.html
0.1.1/search/: search_index.json
docs/: index.md
dynamo_pydantic/: __init__.py  dates.py  dynamo_model.py  errors.py  obj_manager.py  settings.py  table.py  types.py
dynamo_pydantic/_internal/: batching.py  client_subclass_mapping.py  dynamic_subclass.py  find_annotated.py  internal_types.py  pydantic_utils.py  query_criteria.py
pydantic_dyn/: __init__.py  base.py  client.py  errors.py  obj_manager.py  settings.py  table.py  types.py
pydantic_dyn/_internal/: __init__.py  _dynamic_subclass.py  batching.py  client_subclass_mapping.py  dynamic_subclass.py  internal_types.py  pydantic_utils.py  query_criteria.py
tests/: conftest.py  test__date_types.py  test__doc_examples.py  test_dynamo.py
